// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nested try 1`] = `
"try {
  try {
    throw new Error("oops");
  }
  finally {
    console.log("finally");
  }
}
catch (ex) {
  console.error("outer", ex.message);
}
"
`;

exports[`try...catch 1`] = `
"try {
  throw new TypeError("oops");
}
catch ({ name, message }) {
  console.log(name);
  console.log(message);
}
"
`;

exports[`try...catch...finally 1`] = `
"try {
  throw new Error("oops");
}
catch (ex) {
  console.error(ex.message);
}
finally {
  console.log("finally");
}
"
`;

exports[`try...finally 1`] = `
"openMyFile();
try {
  writeMyFile(theData);
}
finally {
  closeMyFile();
}
"
`;
